[project]
name = "lumen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.37",
    "docling>=2.30.0",
    "langchain-aws>=0.2.21",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.3.31",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.12.1",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "streamlit-pdf-viewer>=0.0.22",
]
