[project]
name = "lumen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.37",
    "docling>=2.30.0",
    "fastmcp>=2.2.3",
    "langchain-aws>=0.2.21",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.3.31",
    "loguru>=0.7.3",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.21",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.12.1",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "streamlit-pdf-viewer>=0.0.22",
]
